--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,10 @@
 <mat-drawer-container autosize>
     <mat-drawer [opened]="isOpened" #drawer mode="side">
         <p>Hello!</p>
+        <a routerLink="/pathpractice">practice component</a>
+        <br>
+        <a routerLink="/test">Test component</a>
+        <button routerLink="/test">Click</button>
 
     </mat-drawer>
 
