--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,8 @@
         <br>
         <a routerLink="/test">Test component</a>
         <button routerLink="/test">Click</button>
+        <a routerLink="/window/part1">Part 1 (lazy)</a>
+        <a routerLink="/window/part2">Part 2 (lazy)</a>
 
     </mat-drawer>
 
