--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -54,6 +54,6 @@
 
 <div style="width:320px">
     <app-user *ngFor="let user of users" [person]="user" (onDelete)="remove($event)"></app-user>
-</div>
+</div>ng
 
 <button (click)="toggle()">Toggle</button>
