--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,12 +25,12 @@
 <mat-drawer-container autosize>
     <mat-drawer [opened]="isOpened" #drawer mode="side">
         <p>Hello!</p>
-        <a routerLink="/pathpractice">practice component</a>
-        <br>
-        <a routerLink="/test">Test component</a>
-        <button routerLink="/test">Click</button>
-        <a routerLink="/window/part1">Part 1 (lazy)</a>
-        <a routerLink="/window/part2">Part 2 (lazy)</a>
+        <a routerLink="/pathpractice" routerLinkActive="active">practice component</a>
+        <br/>
+        <a routerLink="/test" routerLinkActive="active">Test component</a>
+        <br/>
+        <a routerLink="/window/part1" routerLinkActive="active">Part 1 (lazy)</a>
+        <a routerLink="/window/part2" routerLinkActive="active">Part 2 (lazy)</a>
 
     </mat-drawer>
 
